--- a/domicilios_rapido_ya/.env
+++ b/domicilios_rapido_ya/.env
@@ -1,11 +1,11 @@
 # MySQL
 
-# DB_ENGINE=mysql
-# DB_NAME=almacen_2025_isem_django
-# DB_USER='admin
-# DB_PASSWORD=MiNiCo57**
-# DB_HOST=127.0.0.1
-# DB_PORT=3306
+DB_ENGINE=mysql
+DB_NAME=rapido_ya_bd2
+DB_USER='admin'
+DB_PASSWORD=12345678
+DB_HOST=127.0.0.1
+DB_PORT=3306
 
 
 # PostgreSQL
@@ -30,12 +30,12 @@
 # Oracle
 
 
-# DB_ENGINE=oracle
-# DB_HOST=127.0.0.1
-# DB_PORT=1521
-# DB_SERVICE=xe
-# DB_USER=ALMACENDB_ADMIN_DJANGO
-# DB_PASSWORD=MiNiCo57
+ #DB_ENGINE=oracle
+ #DB_HOST=127.0.0.1
+ #DB_PORT=1521
+ #DB_SERVICE=xe
+ #DB_USER=rapido_ya_bd2
+ #DB_PASSWORD=12345678
 
 
 
